--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My App</title>
   </head>
   <body>
-    This is my app!
+    <p>This is my app!</p>
+    <p>Hello World</p>
   </body>
 </html>
