--- a/login.html
+++ b/login.html
@@ -2,11 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My App</title>
+    <title></title>
   </head>
   <body>
-    <p>This is my app!</p>
-    <p>Hello World</p>
-    <h1>Hello</h1>
+    Login
   </body>
 </html>
